# hawk

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish-python.yml  publish.yml
crates/hawk/: Cargo.toml
crates/hawk-core/: Cargo.toml
crates/hawk-core/src/: dimension_key.rs  distribution.rs  lib.rs  schema.rs  tests.rs
crates/hawk-engine/: Cargo.toml  README.md
crates/hawk-engine/benches/: bench_jsd.rs
crates/hawk-engine/src/: lib.rs
crates/hawk-engine/src/core/: distribution.rs  error.rs  schema.rs  tests.rs
crates/hawk-engine/src/ingest/: batch_updater.rs  column_mapper.rs  json_reader.rs  mod.rs  parquet_reader.rs  pipeline.rs  schema_inference.rs
crates/hawk-engine/src/math/: jsd.rs  mutual_info.rs  psi.rs  rebin.rs
crates/hawk-engine/src/query/: cache.rs  compare.rs  explain.rs  mod.rs  parser.rs  planner.rs  result_types.rs  track.rs
crates/hawk-engine/src/sql/: executor.rs  formatter.rs  mod.rs  parser.rs
crates/hawk-engine/src/storage/: dist_index.rs  dist_store.rs  file_format.rs  lock.rs  mmap.rs  mod.rs  snapshot_store.rs
crates/hawk-engine/tests/: end_to_end.rs  integration_10k.rs
crates/hawk-ingest/: Cargo.toml
crates/hawk-ingest/src/: batch_updater.rs  column_mapper.rs  csv_reader.rs  pipeline.rs  schema_inference.rs
crates/hawk-math/: Cargo.toml
crates/hawk-math/benches/: bench_jsd.rs
crates/hawk-math/src/: confidence.rs  cramers_v.rs  entropy.rs  hellinger.rs  kl_divergence.rs  lib.rs  mutual_info.rs  psi.rs  rebin.rs  wasserstein.rs
crates/hawk-mcp/: Cargo.toml
crates/hawk-mcp/src/: help_text.rs  main.rs  state.rs  tools.rs
crates/hawk-python/: Cargo.toml  pyproject.toml
crates/hawk-python/src/: lib.rs
crates/hawk-query/: Cargo.toml
crates/hawk-query/src/: cache.rs  compare.rs  explain.rs  lib.rs  planner.rs  result_types.rs  track.rs
crates/hawk-query/tests/: end_to_end.rs  integration_10k.rs
crates/hawk-server/: Cargo.toml
crates/hawk-server/src/: charts.rs  main.rs  templates.rs
crates/hawk-sql/: Cargo.toml
crates/hawk-sql/src/: executor.rs  lib.rs  main.rs  parser.rs  tokenizer.rs
crates/hawk-storage/: Cargo.toml
crates/hawk-storage/src/: dist_index.rs  dist_store.rs  file_format.rs  raw_log.rs  snapshot_store.rs
crates/hawk/src/: lib.rs
tests/: generate_test_data.py
tests/fixtures/: community_notes_10k.csv  community_notes_small.csv
