[package]
name = "hawk-ingest"
description = "Data ingestion for the Hawk analytics engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
parquet = []
json = []

[dependencies]
hawk-core = { path = "../hawk-core", version = "0.1.0" }
hawk-storage = { path = "../hawk-storage", version = "0.1.0" }
hawk-math = { path = "../hawk-math", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
csv.workspace = true
log.workspace = true
rayon = "1"
