[package]
name = "hawk-ingest"
description = "Data ingestion for the Hawk analytics engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[features]
default = []
parquet = []
json = []

[dependencies]
hawk-core = { path = "../hawk-core" }
hawk-storage = { path = "../hawk-storage" }
hawk-math = { path = "../hawk-math" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
csv.workspace = true
log.workspace = true
rayon = "1"
