[package]
name = "hawk-math"
description = "Distribution math primitives for the Hawk analytics engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
hawk-core = { path = "../hawk-core", version = "0.1.0" }
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_jsd"
harness = false
