[package]
name = "hawk-math"
description = "Distribution math primitives for the Hawk analytics engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
hawk-core = { path = "../hawk-core" }
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_jsd"
harness = false
