[package]
name = "hawk-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "hawk_engine"
crate-type = ["cdylib"]

[dependencies]
hawk-engine = { path = "../hawk-engine", features = ["json"] }
pyo3 = { version = "0.28", features = ["extension-module"] }
serde_json = "1"
anyhow = "1"
