[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "hawk-engine"
description = "Distribution-native analytics engine — Python bindings"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "hawk_engine"
manifest-path = "Cargo.toml"
