[package]
name = "hawk-query"
description = "Query engine for the Hawk analytics engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
hawk-core = { path = "../hawk-core" }
hawk-math = { path = "../hawk-math" }
hawk-storage = { path = "../hawk-storage" }
anyhow.workspace = true
serde.workspace = true
thiserror.workspace = true
chrono.workspace = true
lru.workspace = true
parking_lot.workspace = true

[dev-dependencies]
hawk-ingest = { path = "../hawk-ingest" }
