[package]
name = "hawk-server"
description = "HTTP server for the Hawk analytics engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "hawk-server"
path = "src/main.rs"

[dependencies]
hawk-core = { path = "../hawk-core", version = "0.1.0" }
hawk-ingest = { path = "../hawk-ingest", version = "0.1.0" }
hawk-query = { path = "../hawk-query", version = "0.1.0" }
hawk-storage = { path = "../hawk-storage", version = "0.1.0" }
hawk-sql = { path = "../hawk-sql", version = "0.1.0" }
anyhow.workspace = true
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde.workspace = true
serde_json.workspace = true
