[package]
name = "hawk-server"
description = "HTTP server for the Hawk analytics engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "hawk-server"
path = "src/main.rs"

[dependencies]
hawk-core = { path = "../hawk-core" }
hawk-ingest = { path = "../hawk-ingest" }
hawk-query = { path = "../hawk-query" }
hawk-storage = { path = "../hawk-storage" }
hawk-sql = { path = "../hawk-sql" }
anyhow.workspace = true
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde.workspace = true
serde_json.workspace = true
