[package]
name = "hawk-server"
description = "HTTP server for the Hawk analytics engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "hawk-server"
path = "src/main.rs"

[dependencies]
hawk-engine = { path = "../hawk-engine" }
anyhow.workspace = true
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde.workspace = true
serde_json.workspace = true
