[package]
name = "hawk-sql"
description = "SQL parser and executor for the Hawk analytics engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "hawk"
path = "src/main.rs"

[dependencies]
hawk-core = { path = "../hawk-core", version = "0.1.0" }
hawk-math = { path = "../hawk-math", version = "0.1.0" }
hawk-query = { path = "../hawk-query", version = "0.1.0" }
hawk-storage = { path = "../hawk-storage", version = "0.1.0" }
anyhow.workspace = true
