[package]
name = "hawk-sql"
description = "SQL parser and executor for the Hawk analytics engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "hawk"
path = "src/main.rs"

[dependencies]
hawk-core = { path = "../hawk-core" }
hawk-math = { path = "../hawk-math" }
hawk-query = { path = "../hawk-query" }
hawk-storage = { path = "../hawk-storage" }
anyhow.workspace = true
