[package]
name = "hawk-engine"
description = "Distribution-native analytics engine — compact probabilistic storage with information-theoretic queries"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
parquet = ["hawk-ingest/parquet"]
json = ["hawk-ingest/json"]
server = ["dep:hawk-server"]
sql = ["dep:hawk-sql"]

[dependencies]
hawk-core = { path = "../hawk-core" }
hawk-math = { path = "../hawk-math" }
hawk-storage = { path = "../hawk-storage" }
hawk-ingest = { path = "../hawk-ingest" }
hawk-query = { path = "../hawk-query" }
hawk-sql = { path = "../hawk-sql", optional = true }
hawk-server = { path = "../hawk-server", optional = true }
